feat: updated educational questions

--- a/datasets_new/topics/ai/education/ai.education.reasoning.json
+++ b/datasets_new/topics/ai/education/ai.education.reasoning.json
@@ -4066,5 +4066,194 @@
         "output": "Anchoring rules, human review cycles, and drift-detection analytics prevent AI curriculum alignment systems from gradually altering core educational content.",
         "format_version": "1.1",
         "difficulty": 7
+    },
+    {
+        "id": 453,
+        "topic": "ai.education",
+        "question": "How can AI help instructors recognize when students’ errors stem from misinterpreting symbolic notation rather than misunderstanding concepts?",
+        "think": "AI analyzes response traces and explanation patterns to detect when students confuse symbols—such as mixing function notation with multiplication or misreading inequality symbols. When students provide conceptually correct reasoning but apply the wrong symbolic operations, the system identifies a notation comprehension issue, not a conceptual deficit.",
+        "output": "AI distinguishes symbolic-notation confusion from conceptual errors by comparing reasoning steps with the symbols students apply incorrectly.",
+        "format_version": "1.1",
+        "difficulty": 5
+    },
+    {
+        "id": 454,
+        "topic": "ai.education",
+        "question": "How can AI help teachers identify when students misunderstand task objectives because they focus too heavily on examples rather than instructions?",
+        "think": "AI compares student outputs with model examples and task instructions. If outputs mirror example structure but ignore stated objectives, the system flags example-overfitting. This allows teachers to clarify expectations and introduce independent reasoning prompts.",
+        "output": "AI detects example-overfitting by spotting structural mimicry inconsistent with task objectives, prompting clarification.",
+        "format_version": "1.1",
+        "difficulty": 6
+    },
+    {
+        "id": 455,
+        "topic": "ai.education",
+        "question": "How can AI-supported platforms help instructors identify when students’ comprehension issues arise from missing background knowledge outside the standard curriculum?",
+        "think": "AI correlates error clusters with prerequisite domains not formally included in the course—such as missing cultural references, domain vocabulary, or assumed prior experiences. When students struggle with tasks requiring outside knowledge, the system flags contextual gaps.",
+        "output": "AI reveals missing background knowledge by linking errors to prerequisite domains not covered in the current curriculum.",
+        "format_version": "1.1",
+        "difficulty": 5
+    },
+    {
+        "id": 456,
+        "topic": "ai.education",
+        "question": "How can AI detect when students’ group participation appears balanced on the surface but lacks meaningful cognitive contribution?",
+        "think": "AI measures semantic density, conceptual depth, and reasoning coherence rather than participation frequency. Students who talk often but contribute little conceptual value are identified through low idea-density metrics. Teachers can then redistribute cognitive roles.",
+        "output": "AI evaluates contribution depth rather than frequency, revealing when participation is active but cognitively shallow.",
+        "format_version": "1.1",
+        "difficulty": 6
+    },
+    {
+        "id": 457,
+        "topic": "ai.education",
+        "question": "How can AI help instructors identify when students misinterpret real-world scenarios due to over-literal reading of problem context?",
+        "think": "AI compares student responses to reasoning templates. When students treat contextual details as strict rules rather than approximations—such as assuming ideal conditions in real-world physics—the system flags over-literal interpretation. Teachers can introduce contextual reasoning tasks to build flexible judgment.",
+        "output": "AI highlights over-literal interpretation by detecting rigid reasoning applied to real-world approximations.",
+        "format_version": "1.1",
+        "difficulty": 6
+    },
+    {
+        "id": 458,
+        "topic": "ai.education",
+        "question": "How can AI-supported learning systems detect when students exhibit hidden misconceptions behind consistently correct answers?",
+        "think": "AI uses counterfactual questioning—examining how students justify reasoning under slightly altered conditions. If reasoning collapses when variables shift, it indicates hidden misconceptions masked by rote procedures.",
+        "output": "AI uncovers hidden misconceptions by testing reasoning stability under counterfactual variations.",
+        "format_version": "1.1",
+        "difficulty": 6
+    },
+    {
+        "id": 459,
+        "topic": "ai.education",
+        "question": "How can AI help instructors detect when students’ writing lacks coherence due to conceptual overload rather than poor language skills?",
+        "think": "AI evaluates idea structuring, concept transitions, and thematic drift. When students attempt to integrate too many ideas at once, coherence breaks down even if grammar is strong. The system flags overload-based incoherence so teachers can guide conceptual simplification.",
+        "output": "AI identifies overload-driven incoherence by analyzing concept transitions and thematic fragmentation.",
+        "format_version": "1.1",
+        "difficulty": 5
+    },
+    {
+        "id": 460,
+        "topic": "ai.education",
+        "question": "How can AI help identify when mathematical errors arise from overgeneralizing patterns observed in early learning stages?",
+        "think": "AI tracks error evolution across grade-level tasks. When students apply early heuristics—like assuming operations behave identically across number types—AI detects pattern-stability where it shouldn’t exist. Teachers can introduce contrastive cases.",
+        "output": "AI identifies pattern overgeneralization by monitoring when early heuristics persist in contexts where they fail.",
+        "format_version": "1.1",
+        "difficulty": 5
+    },
+    {
+        "id": 461,
+        "topic": "ai.education",
+        "question": "How can AI-supported assessment tools detect when students misunderstand abstract concepts due to weak mental visualization skills?",
+        "think": "AI compares performance on symbolic tasks vs visualization-dependent tasks. Discrepancies—strong symbolic reasoning but weak visual execution—signal spatial or visualization limitations. Teachers provide visual scaffolds or analog representations.",
+        "output": "AI identifies visualization deficits through performance gaps between symbolic and spatially demanding tasks.",
+        "format_version": "1.1",
+        "difficulty": 6
+    },
+    {
+        "id": 462,
+        "topic": "ai.education",
+        "question": "How can AI detect when students’ disengagement reflects curriculum misalignment with personal interests rather than cognitive difficulty?",
+        "think": "AI analyzes sentiment markers, interest tags, and reflective writing. When students perform adequately but express low personal relevance, or selectively engage with topics matching interests, the system identifies relevance-based disengagement.",
+        "output": "AI detects interest misalignment by analyzing sentiment and selective engagement patterns.",
+        "format_version": "1.1",
+        "difficulty": 4
+    },
+    {
+        "id": 463,
+        "topic": "ai.education",
+        "question": "How can AI help teachers identify when students’ errors are triggered by ambiguous diagrams or misleading visual representations?",
+        "think": "AI compares student responses across different visual variants. Consistent errors across a particular diagram type indicate flawed visual design, not student misunderstanding. Teachers can revise visuals to reduce ambiguity.",
+        "output": "AI identifies diagram-induced errors by comparing performance across visual variants and spotting misleading visuals.",
+        "format_version": "1.1",
+        "difficulty": 6
+    },
+    {
+        "id": 464,
+        "topic": "ai.education",
+        "question": "How can AI-supported systems help identify when students’ collaboration issues stem from unequal distribution of conceptual workload?",
+        "think": "AI analyzes idea density, problem-solving leadership, and cognitive contribution ratios. When one student consistently handles conceptual heavy-lifting, the system flags imbalance. Teachers can intervene by restructuring roles or adjusting task sequencing.",
+        "output": "AI detects conceptual workload imbalance by analyzing idea-density and reasoning leadership patterns within groups.",
+        "format_version": "1.1",
+        "difficulty": 6
+    },
+    {
+        "id": 465,
+        "topic": "ai.education",
+        "question": "How can AI detect when students misinterpret abstract formalism because they lack concrete grounding experiences?",
+        "think": "AI identifies when students struggle on tasks requiring abstraction but perform well on concrete analogs. This mismatch highlights missing experiential grounding. Teachers can introduce manipulatives, real-world examples, or embodied learning experiences.",
+        "output": "AI detects abstraction struggles by comparing performance on formal tasks with concrete analog versions.",
+        "format_version": "1.1",
+        "difficulty": 5
+    },
+    {
+        "id": 466,
+        "topic": "ai.education",
+        "question": "How can AI help universities detect when course pacing becomes misaligned with student cognitive load over time?",
+        "think": "AI monitors task difficulty, performance variance, and cognitive-load indicators such as increased error-making late in modules. When cognitive strain rises without corresponding content difficulty, pacing drift is occurring. Instructors can recalibrate schedule distribution.",
+        "output": "AI detects pacing drift by monitoring cognitive-load escalation patterns across a course timeline.",
+        "format_version": "1.1",
+        "difficulty": 6
+    },
+    {
+        "id": 467,
+        "topic": "ai.education",
+        "question": "How can AI-supported teaching tools help instructors distinguish between productive experimentation and unfocused academic wandering in project-based learning?",
+        "think": "Exploratory behaviors often resemble disengagement when viewed superficially: nonlinear progress, sudden pivots, or inconsistent drafts. AI must analyze semantic evolution—whether ideas deepen, diversify, or connect across iterations. Productive experimentation shows expanding conceptual networks, whereas unfocused wandering produces disconnected or circular patterns. Temporal clustering helps identify directionality. Teachers receive indicators highlighting whether exploration is converging, diverging meaningfully, or stalling.",
+        "output": "AI differentiates experimentation from wandering by analyzing conceptual evolution, connection patterns, and directional progress across student drafts.",
+        "format_version": "1.1",
+        "difficulty": 7
+    },
+    {
+        "id": 468,
+        "topic": "ai.education",
+        "question": "How can universities ensure AI-generated feedback does not normalize a single stylistic standard, thereby constraining students’ academic voice?",
+        "think": "Standardized AI feedback often pushes students toward uniform sentence structures, transitions, and rhetorical patterns. Over time this homogenizes voice. Universities must diversify training corpora, include style-variation constraints, and surface multiple improvement suggestions rather than a single prescriptive rewrite. Human instructors review whether feedback encourages actual conceptual improvement or stylistic conformity.",
+        "output": "Universities must promote style diversity through varied training data, multi-option feedback, and instructor oversight to avoid homogenizing student voice.",
+        "format_version": "1.1",
+        "difficulty": 6
+    },
+    {
+        "id": 469,
+        "topic": "ai.education",
+        "question": "How can ministries prevent AI-generated teacher-performance analytics from unintentionally punishing educators who work with high-need or underserved student populations?",
+        "think": "Raw performance metrics often correlate with socioeconomic and support disparities, not teaching quality. AI must include poverty-adjusted baselines, resource weighting, and growth-based indicators rather than absolute performance. Yearly audits should confirm that teachers in high-need environments are not disproportionately rated lower. Transparent adjustment factors help maintain trust and fairness.",
+        "output": "Growth-based analytics, resource-adjusted baselines, and fairness audits prevent AI from penalizing teachers working with underserved communities.",
+        "format_version": "1.1",
+        "difficulty": 7
+    },
+    {
+        "id": 470,
+        "topic": "ai.education",
+        "question": "How can AI-powered recommendation engines help students develop interdisciplinary thinking without overwhelming them with unrelated content?",
+        "think": "Interdisciplinary exposure requires balancing novel connections with cognitive load. AI must identify conceptual bridges—shared theories, cross-domain analogies—rather than push random content. It evaluates student readiness and recommends adjacent fields that extend existing mental models. Teachers validate whether recommendations support synthesis rather than distract from core learning.",
+        "output": "AI supports interdisciplinary growth by selecting conceptually adjacent content and monitoring cognitive readiness, avoiding overload.",
+        "format_version": "1.1",
+        "difficulty": 6
+    },
+    {
+        "id": 471,
+        "topic": "ai.education",
+        "question": "How can AI-supported integrity systems avoid misclassifying collaborative ideation in open-ended subjects as academic dishonesty?",
+        "think": "Creative fields often involve shared brainstorming leading to similar conceptual structures. Integrity models must distinguish between identical artifacts and independently convergent ideas. They analyze divergence in intermediate drafts, individual contribution logs, and semantic variability. Teachers review flagged cases to verify whether patterns reflect legitimate collaborative ideation.",
+        "output": "AI must evaluate draft evolution, contribution logs, and semantic variation to differentiate legitimate collaborative ideation from dishonesty.",
+        "format_version": "1.1",
+        "difficulty": 7
+    },
+    {
+        "id": 472,
+        "topic": "ai.education",
+        "question": "How can AI help instructors identify when students are failing due to task-switching overload rather than difficulty with the material?",
+        "think": "Frequent switching between multitask-heavy modules produces fragmented attention and elevated error variance. AI monitors rapid context shifts, fragmented time blocks, and declining accuracy following switches. If comprehension remains stable in single-task sessions, the issue is cognitive fragmentation, not content difficulty. Teachers can restructure modules to reduce switching pressure.",
+        "output": "AI detects task-switching overload through pattern fragmentation and accuracy drops tied to rapid context changes, guiding structural adjustments.",
+        "format_version": "1.1",
+        "difficulty": 6
+    },
+    {
+        "id": 473,
+        "topic": "ai.education",
+        "question": "How can ministries ensure AI-powered language assessments remain fair for dialect-speaking students whose grammar patterns differ systematically from standardized norms?",
+        "think": "Standard language corpora often ignore dialectal grammar, causing AI to treat legitimate patterns as errors. Ministries must incorporate dialect-specific corpora, design feature separation between linguistic variance and true errors, and include dialect experts in annotation. Score distribution audits across dialect groups detect systemic bias. Explanations should clarify when assessments evaluate comprehension, not conformity.",
+        "output": "Dialect-inclusive corpora, feature separation, expert annotation, and distribution audits ensure AI language assessments do not penalize dialect-speaking students.",
+        "format_version": "1.1",
+        "difficulty": 7
     }
 ]
